codigo/Aymanarchivos/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOUBLE
    ELSE
    NOT

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> decl_stmt
Rule 5     statement -> expr_stmt
Rule 6     statement -> for_stmt
Rule 7     statement -> SEMICOLON
Rule 8     decl_stmt -> LET ID decl_type ASSIGN expression
Rule 9     decl_stmt -> LET ID ASSIGN expression
Rule 10    decl_stmt -> LET ID ASSIGN
Rule 11    decl_stmt -> LET ID
Rule 12    decl_type -> COLON ID
Rule 13    decl_type -> <empty>
Rule 14    for_stmt -> FOR ID IN expression block
Rule 15    block -> LBRACE block_enter statements RBRACE
Rule 16    block_enter -> <empty>
Rule 17    expr_stmt -> expression
Rule 18    expression -> expression PLUS expression
Rule 19    expression -> expression MINUS expression
Rule 20    expression -> expression TIMES expression
Rule 21    expression -> expression DIVIDE expression
Rule 22    expression -> expression MOD expression
Rule 23    expression -> expression GT expression
Rule 24    expression -> expression LT expression
Rule 25    expression -> expression GE expression
Rule 26    expression -> expression LE expression
Rule 27    expression -> expression EQ expression
Rule 28    expression -> expression NE expression
Rule 29    expression -> expression AND expression
Rule 30    expression -> expression OR expression
Rule 31    expression -> expression DOTDOTDOT expression
Rule 32    expression -> INTEGER
Rule 33    expression -> FLOAT
Rule 34    expression -> BOOLEAN
Rule 35    expression -> STRING
Rule 36    expression -> CHARACTER
Rule 37    expression -> ID
Rule 38    expression -> LPAREN expression RPAREN
Rule 39    expression -> ID LAMBDA_IN expression
Rule 40    expression -> LBRACKET bracket_items RBRACKET
Rule 41    bracket_item -> expression COLON expression
Rule 42    bracket_item -> expression
Rule 43    bracket_items -> bracket_items COMMA bracket_item
Rule 44    bracket_items -> bracket_item
Rule 45    bracket_items -> <empty>
Rule 46    expression -> IF expression block

Terminals, with rules where they appear

AND                  : 29
ASSIGN               : 8 9 10
BOOLEAN              : 34
CHARACTER            : 36
COLON                : 12 41
COMMA                : 43
DIVIDE               : 21
DOTDOTDOT            : 31
DOUBLE               : 
ELSE                 : 
EQ                   : 27
FLOAT                : 33
FOR                  : 14
GE                   : 25
GT                   : 23
ID                   : 8 9 10 11 12 14 37 39
IF                   : 46
IN                   : 14
INTEGER              : 32
LAMBDA_IN            : 39
LBRACE               : 15
LBRACKET             : 40
LE                   : 26
LET                  : 8 9 10 11
LPAREN               : 38
LT                   : 24
MINUS                : 19
MOD                  : 22
NE                   : 28
NOT                  : 
OR                   : 30
PLUS                 : 18
RBRACE               : 15
RBRACKET             : 40
RPAREN               : 38
SEMICOLON            : 7
STRING               : 35
TIMES                : 20
error                : 

Nonterminals, with rules where they appear

block                : 14 46
block_enter          : 15
bracket_item         : 43 44
bracket_items        : 40 43
decl_stmt            : 4
decl_type            : 8
expr_stmt            : 5
expression           : 8 9 14 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 38 39 41 41 42 46
for_stmt             : 6
program              : 0
statement            : 2 3
statements           : 1 2 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . decl_stmt
    (5) statement -> . expr_stmt
    (6) statement -> . for_stmt
    (7) statement -> . SEMICOLON
    (8) decl_stmt -> . LET ID decl_type ASSIGN expression
    (9) decl_stmt -> . LET ID ASSIGN expression
    (10) decl_stmt -> . LET ID ASSIGN
    (11) decl_stmt -> . LET ID
    (17) expr_stmt -> . expression
    (14) for_stmt -> . FOR ID IN expression block
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression MOD expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NE expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression DOTDOTDOT expression
    (32) expression -> . INTEGER
    (33) expression -> . FLOAT
    (34) expression -> . BOOLEAN
    (35) expression -> . STRING
    (36) expression -> . CHARACTER
    (37) expression -> . ID
    (38) expression -> . LPAREN expression RPAREN
    (39) expression -> . ID LAMBDA_IN expression
    (40) expression -> . LBRACKET bracket_items RBRACKET
    (46) expression -> . IF expression block

    SEMICOLON       shift and go to state 7
    LET             shift and go to state 8
    FOR             shift and go to state 11
    INTEGER         shift and go to state 12
    FLOAT           shift and go to state 13
    BOOLEAN         shift and go to state 14
    STRING          shift and go to state 15
    CHARACTER       shift and go to state 16
    ID              shift and go to state 9
    LPAREN          shift and go to state 17
    LBRACKET        shift and go to state 18
    IF              shift and go to state 19

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    decl_stmt                      shift and go to state 4
    expr_stmt                      shift and go to state 5
    for_stmt                       shift and go to state 6
    expression                     shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . decl_stmt
    (5) statement -> . expr_stmt
    (6) statement -> . for_stmt
    (7) statement -> . SEMICOLON
    (8) decl_stmt -> . LET ID decl_type ASSIGN expression
    (9) decl_stmt -> . LET ID ASSIGN expression
    (10) decl_stmt -> . LET ID ASSIGN
    (11) decl_stmt -> . LET ID
    (17) expr_stmt -> . expression
    (14) for_stmt -> . FOR ID IN expression block
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression MOD expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression LT expression
    (25) expression -> . expression GE expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NE expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression DOTDOTDOT expression
    (32) expression -> . INTEGER
    (33) expression -> . FLOAT
    (34) expression -> . BOOLEAN
    (35) expression -> . STRING
    (36) expression -> . CHARACTER
    (37) expression -> . ID
    (38) expression -> . LPAREN expression RPAREN
    (39) expression -> . ID LAMBDA_IN expression
    (40) expression -> . LBRACKET bracket_items RBRACKET
    (46) expression -> . IF expression block

    $end            reduce using rule 1 (program -> statements .)
    SEMICOLON       shift and go to state 7
    LET             shift and go to state 8
    FOR             shift and go to state 11
    INTEGER         shift and go to state 12
    FLOAT           shift and go to state 13
    BOOLEAN         shift and go to state 14
    STRING          shift and go to state 15
    CHARACTER       shift and go to state 16
    ID              shift and go to state 9
    LPAREN          shift and go to state 17
    LBRACKET        shift and go to state 18
    IF              shift and go to state 19

    statement                      shift and go to state 20
    decl_stmt                      shift and go to state 4
    expr_stmt                      shift and go to state 5
    for_stmt                       shift and go to state 6
    expression                     shift and go to state 10

state 3

    (3) statements -> statement .

    SEMICOLON       reduce using rule 3 (statements -> statement .)
    LET             reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    INTEGER         reduce using rule 3 (statements -> statement .)
    FLOAT           reduce using rule 3 (statements -> statement .)
    BOOLEAN         reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    CHARACTER       reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    LBRACKET        reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> decl_stmt .

    SEMICOLON       reduce using rule 4 (statement -> decl_stmt .)
    LET             reduce using rule 4 (statement -> decl_stmt .)
    FOR             reduce using rule 4 (statement -> decl_stmt .)
    INTEGER         reduce using rule 4 (statement -> decl_stmt .)
    FLOAT           reduce using rule 4 (statement -> decl_stmt .)
    BOOLEAN         reduce using rule 4 (statement -> decl_stmt .)
    STRING          reduce using rule 4 (statement -> decl_stmt .)
    CHARACTER       reduce using rule 4 (statement -> decl_stmt .)
    ID              reduce using rule 4 (statement -> decl_stmt .)
    LPAREN          reduce using rule 4 (statement -> decl_stmt .)
    LBRACKET        reduce using rule 4 (statement -> decl_stmt .)
    IF              reduce using rule 4 (statement -> decl_stmt .)
    $end            reduce using rule 4 (statement -> decl_stmt .)
    RBRACE          reduce using rule 4 (statement -> decl_stmt .)


state 5

    (5) statement -> expr_stmt .

    SEMICOLON       reduce using rule 5 (statement -> expr_stmt .)
    LET             reduce using rule 5 (statement -> expr_stmt .)
    FOR             reduce using rule 5 (statement -> expr_stmt .)
    INTEGER         reduce using rule 5 (statement -> expr_stmt .)
    FLOAT           reduce using rule 5 (statement -> expr_stmt .)
    BOOLEAN         reduce using rule 5 (statement -> expr_stmt .)
    STRING          reduce using rule 5 (statement -> expr_stmt .)
    CHARACTER       reduce using rule 5 (statement -> expr_stmt .)
    ID              reduce using rule 5 (statement -> expr_stmt .)
    LPAREN          reduce using rule 5 (statement -> expr_stmt .)
    LBRACKET        reduce using rule 5 (statement -> expr_stmt .)
    IF              reduce using rule 5 (statement -> expr_stmt .)
    $end            reduce using rule 5 (statement -> expr_stmt .)
    RBRACE          reduce using rule 5 (statement -> expr_stmt .)


state 6

    (6) statement -> for_stmt .

    SEMICOLON       reduce using rule 6 (statement -> for_stmt .)
    LET             reduce using rule 6 (statement -> for_stmt .)
    FOR             reduce using rule 6 (statement -> for_stmt .)
    INTEGER         reduce using rule 6 (statement -> for_stmt .)
    FLOAT           reduce using rule 6 (statement -> for_stmt .)
    BOOLEAN         reduce using rule 6 (statement -> for_stmt .)
    STRING          reduce using rule 6 (statement -> for_stmt .)
    CHARACTER       reduce using rule 6 (statement -> for_stmt .)
    ID              reduce using rule 6 (statement -> for_stmt .)
    LPAREN          reduce using rule 6 (statement -> for_stmt .)
    LBRACKET        reduce using rule 6 (statement -> for_stmt .)
    IF              reduce using rule 6 (statement -> for_stmt .)
    $end            reduce using rule 6 (statement -> for_stmt .)
    RBRACE          reduce using rule 6 (statement -> for_stmt .)


state 7

    (7) statement -> SEMICOLON .

    SEMICOLON       reduce using rule 7 (statement -> SEMICOLON .)
    LET             reduce using rule 7 (statement -> SEMICOLON .)
    FOR             reduce using rule 7 (statement -> SEMICOLON .)
    INTEGER         reduce using rule 7 (statement -> SEMICOLON .)
    FLOAT           reduce using rule 7 (statement -> SEMICOLON .)
    BOOLEAN         reduce using rule 7 (statement -> SEMICOLON .)
    STRING          reduce using rule 7 (statement -> SEMICOLON .)
    CHARACTER       reduce using rule 7 (statement -> SEMICOLON .)
    ID              reduce using rule 7 (statement -> SEMICOLON .)
    LPAREN          reduce using rule 7 (statement -> SEMICOLON .)
    LBRACKET        reduce using rule 7 (statement -> SEMICOLON .)
    IF              reduce using rule 7 (statement -> SEMICOLON .)
    $end            reduce using rule 7 (statement -> SEMICOLON .)
    RBRACE          reduce using rule 7 (statement -> SEMICOLON .)


state 8

    (8) decl_stmt -> LET . ID decl_type ASSIGN expression
    (9) decl_stmt -> LET . ID ASSIGN expression
    (10) decl_stmt -> LET . ID ASSIGN
    (11) decl_stmt -> LET . ID

    ID              shift and go to state 21


state 9

    (37) expression -> ID .
    (39) expression -> ID . LAMBDA_IN expression

    PLUS            reduce using rule 37 (expression -> ID .)
    MINUS           reduce using rule 37 (expression -> ID .)
    TIMES           reduce using rule 37 (expression -> ID .)
    DIVIDE          reduce using rule 37 (expression -> ID .)
    MOD             reduce using rule 37 (expression -> ID .)
    GT              reduce using rule 37 (expression -> ID .)
    LT              reduce using rule 37 (expression -> ID .)
    GE              reduce using rule 37 (expression -> ID .)
    LE              reduce using rule 37 (expression -> ID .)
    EQ              reduce using rule 37 (expression -> ID .)
    NE              reduce using rule 37 (expression -> ID .)
    AND             reduce using rule 37 (expression -> ID .)
    OR              reduce using rule 37 (expression -> ID .)
    DOTDOTDOT       reduce using rule 37 (expression -> ID .)
    SEMICOLON       reduce using rule 37 (expression -> ID .)
    LET             reduce using rule 37 (expression -> ID .)
    FOR             reduce using rule 37 (expression -> ID .)
    INTEGER         reduce using rule 37 (expression -> ID .)
    FLOAT           reduce using rule 37 (expression -> ID .)
    BOOLEAN         reduce using rule 37 (expression -> ID .)
    STRING          reduce using rule 37 (expression -> ID .)
    CHARACTER       reduce using rule 37 (expression -> ID .)
    ID              reduce using rule 37 (expression -> ID .)
    LPAREN          reduce using rule 37 (expression -> ID .)
    LBRACKET        reduce using rule 37 (expression -> ID .)
    IF              reduce using rule 37 (expression -> ID .)
    $end            reduce using rule 37 (expression -> ID .)
    RPAREN          reduce using rule 37 (expression -> ID .)
    COLON           reduce using rule 37 (expression -> ID .)
    RBRACKET        reduce using rule 37 (expression -> ID .)
    COMMA           reduce using rule 37 (expression -> ID .)
    LBRACE          reduce using rule 37 (expression -> ID .)
    RBRACE          reduce using rule 37 (expression -> ID .)
    LAMBDA_IN       shift and go to state 22


state 10

    (17) expr_stmt -> expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . MOD expression
    (23) expression -> expression . GT expression
    (24) expression -> expression . LT expression
    (25) expression -> expression . GE expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . EQ expression
    (28) expression -> expression . NE expression
    (29) expression -> expression . AND expression
    (30) expression -> expression . OR expression
    (31) expression -> expression . DOTDOTDOT expression

    SEMICOLON       reduce using rule 17 (expr_stmt -> expression .)
    LET             reduce using rule 17 (expr_stmt -> expression .)
    FOR             reduce using rule 17 (expr_stmt -> expression .)
    INTEGER         reduce using rule 17 (expr_stmt -> expression .)
    FLOAT           reduce using rule 17 (expr_stmt -> expression .)
    BOOLEAN         reduce using rule 17 (expr_stmt -> expression .)
    STRING          reduce using rule 17 (expr_stmt -> expression .)
    CHARACTER       reduce using rule 17 (expr_stmt -> expression .)
    ID              reduce using rule 17 (expr_stmt -> expression .)
    LPAREN          reduce using rule 17 (expr_stmt -> expression .)
    LBRACKET        reduce using rule 17 (expr_stmt -> expression .)
    IF              reduce using rule 17 (expr_stmt -> expression .)
    $end            reduce using rule 17 (expr_stmt -> expression .)
    RBRACE          reduce using rule 17 (expr_stmt -> expression .)
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    TIMES           shift and go to state 25
    DIVIDE          shift and go to state 26
    MOD             shift and go to state 27
    GT              shift and go to state 28
    LT              shift and go to state 29
    GE              shift and go to state 30
    LE              shift and go to state 31
    EQ              shift and go to state 32
    NE              shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    DOTDOTDOT       shift and go to state 36


state 11

    (14) for_stmt -> FOR . ID IN expression block

    ID              shift and go to state 37


state 12

    (32) expression -> INTEGER .
